syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";
// The greeting service definition.
service GrpcService {
  // Greeting procedure
  rpc grpcProcedure (GrpcRequest) returns (GrpcResponse) {}
  rpc streamProcedure (GrpcRequest) returns (stream GrpcResponse) {}
  rpc streamFib (fibRequest) returns (stream fibResponse) {}
  rpc streamToSrv (stream GrpcRequest) returns (GrpcResponse) {}
  rpc streamToClient (ByteRequest) returns (stream ByteResponse) {}
}
// The request message containing the user's name and age.
message GrpcRequest {
  string name = 1;
  int32 age = 2;
}
// The response message containing the greetings
message GrpcResponse {
  string message = 1;
}

message fibRequest{
  int32 pow = 1;
  int32 num = 2;
}

message fibResponse{
  int32 fib = 1;
  int32 fib2 = 2;
}

message ByteResponse {
  int32 num_of_bytes = 1;
  bytes chunk = 2;
}

message ByteRequest {
  string id = 1;
}